fixed some errors on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,8 @@ section {
     gap: 10px;
 }
 
-.logo a, img{
+.logo a,
+img {
     width: 60px;
     height: 60px;
     border-radius: 50%;
